--- a/project.properties
+++ b/project.properties
@@ -11,8 +11,10 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-19
+target=android-20
 android.library.reference.1=..\\appcompat_v7_2
 android.library.reference.2=..\\appcompat_v7
-android.library.reference.3=../Android/android-support-v7-appcompat
+android.library.reference.3=..\\Android\\android-support-v7-appcompat
 
+android.library.reference.4=..\\android-support-v7-appcompat
+android.library.reference.5=../android-support-v7-appcompat
