--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.ufavaloro.android.simulador.UI.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,11 +27,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RemoteDeviceActivity"
+            android:name="com.ufavaloro.android.simulador.UI.RemoteDeviceActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".AdcChannelsActivity"
+            android:name="com.ufavaloro.android.simulador.UI.AdcChannelsActivity"
             android:label="@string/title_activity_adc_channels" >
         </activity>
     </application>
